[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/CartoonLevelSmall.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Adventurer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Lights/light.png" type="Texture" id=3]
[ext_resource path="res://Backgrounds/backgroundColorGrass.png" type="Texture" id=11]
[ext_resource path="res://Worlds/MainWorld.gd" type="Script" id=13]

[node name="World" type="Node2D"]
script = ExtResource( 13 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 208, 768 )
current = true
limit_bottom = 100000000
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.4
drag_margin_top = 0.4
drag_margin_right = 0.4
drag_margin_bottom = 0.7
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="backgroundColorGrass" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 514.281, 330.566 )
texture = ExtResource( 11 )

[node name="PlayerStatus" type="Label" parent="CanvasLayer"]
modulate = Color( 0.792157, 0, 0, 1 )
margin_right = 40.0
margin_bottom = 14.0
text = "PLAYER STATUS: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerDirection" type="Label" parent="CanvasLayer"]
modulate = Color( 0.792157, 0, 0, 1 )
margin_top = 16.0
margin_right = 105.0
margin_bottom = 30.0
text = "DIRECTION: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CartoonSmall" parent="." instance=ExtResource( 1 )]

[node name="Adventurer" parent="." instance=ExtResource( 2 )]
position = Vector2( 208, 768 )
MAX_SPEED = 500.0
ACCELERATION = 3000.0
FRICTION = 30000.0
BOOST_FORCE = 1500
GRAVITY = Vector2( 0, 75 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Adventurer"]
remote_path = NodePath("../../Camera2D")

[node name="Light2D" type="Light2D" parent="Adventurer"]
position = Vector2( 0, -50 )
texture = ExtResource( 3 )
texture_scale = 0.5
mode = 2
shadow_gradient_length = 20.0
[connection signal="direction_changed" from="Adventurer" to="." method="_on_Adventurer_direction_changed"]
[connection signal="status_changed" from="Adventurer" to="." method="_on_Adventurer_status_changed"]
